--- a/AngularProject/src/app/components/dashboard/dashboard.component.html
+++ b/AngularProject/src/app/components/dashboard/dashboard.component.html
@@ -1,76 +1,110 @@
 <main class="cards">
     <div class="row">
-      <mat-card class="alert-card" [@cardAnimation]>
-        <h2 class="alert-section-title">Active alerts</h2>
-        <app-alert [rooms]="rooms"></app-alert>
-      </mat-card>
-      <mat-card class="card small-card" [@cardAnimation]>
+      <mat-card class="card rooms-list-card" [@cardAnimation]>
+        <mat-card-title class="list-title">
+          <mat-icon style="vertical-align: middle; margin-right: 6px;">home</mat-icon>
+          List of my rooms
+          <p style="font-size: 0.9rem;">Here you can view, edit or delete your rooms and see the last values of the sensors.</p>
+        </mat-card-title>
+        <mat-card-content>
+          <div class="rooms-container">
+            <div *ngFor="let room of rooms; trackBy: trackByRoomId" class="dashboard-card" (click)="open_room_dialog(room)">
+              <button mat-icon-button class="delete-btn" (click)="confirm_remove(room,$event)">
+                <mat-icon color="warn">close</mat-icon>
+              </button>
 
-        <mat-card-content class="sensor-hystory-content">
+              <div class="room-card-header">
+                <mat-icon>meeting_room</mat-icon> {{room.name}}
+              </div>
 
-          <div class="form-fields">
-            <mat-form-field appearance="outline">
-              <mat-label>Select room</mat-label>
-              <mat-select [(value)]="selectedRoom" (selectionChange)="select_room($event.value)">
-                <mat-option *ngFor="let room of rooms" [value]="room">{{ room.name }}</mat-option>
-              </mat-select>
-            </mat-form-field>
-
-            <mat-form-field appearance="outline" *ngIf="selectedRoom">
-              <mat-label>Select sensor</mat-label>
-              <mat-select [(value)]="selectedSensor" (selectionChange)="select_sensor($event.value)">
-                <mat-option *ngFor="let sensor of selectedRoom.sensors" [value]="sensor">{{ sensor.sensorType }}</mat-option>
-              </mat-select>
-            </mat-form-field>
-
-            <mat-form-field appearance="outline" *ngIf="selectedSensor">
-              <mat-label>Select date</mat-label>
-              <input matInput [matDatepicker]="picker" placeholder="Choose a date" [(ngModel)]="selectedDate" (dateChange)="selected_date($event.value)">
-              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-              <mat-datepicker #picker></mat-datepicker>
-            </mat-form-field>
-          </div>
-
-
-          <div class="chart-container" *ngIf="selectedSensor">
-            <canvas baseChart
-              [data]="chartData"
-              [options]="chartOptions"
-              [type]="'line'">
-              #realTimeChart={{chartData}}
-
-            </canvas>
-          </div>
-        </mat-card-content>
-
-      </mat-card>
-    </div>
-    <mat-card class="card large-card" [@cardAnimation]>
-      <mat-card-title class="list-title">List of my rooms</mat-card-title>
-      <div class="rooms-container">
-        <div *ngFor="let room of rooms" class="dashboard-card" (click)="open_room_dialog(room)">
-          <button mat-icon-button class="delete-btn" (click)="confirm_remove(room,$event)">
-            <mat-icon color="warn">close</mat-icon>
-          </button>
-
-          <div class="room-card-header">
-            {{room.name}}
-          </div>
-
-          <div class="room-card-content">
+              <div class="room-card-content">
             <span class="sensor-count">
               {{ room.sensors?.length || 0 }} sensor{{ room.sensors?.length === 1 ? '' : 's' }}
             </span>
+              </div>
+            </div>
+
+            <div class="dashboard-card add-room">
+              <div class="room-card-header">
+                <p>New</p>
+              </div>
+              <button mat-fab color="primary" (click)="open_add_room_dialog()">
+                <mat-icon>add</mat-icon>
+              </button>
+            </div>
           </div>
+        </mat-card-content>
+      </mat-card>
+
+      <mat-card class="card manage-alerts-card" [@cardAnimation]>
+        <mat-card-title class="list-title">
+          <mat-icon style="vertical-align: middle; margin-right: 6px;">notifications_active</mat-icon>
+          Manage My Alerts
+          <p style="font-size: 0.9rem;">Here you can view, edit or delete your custom alerts based on selected room/sensor.</p>
+        </mat-card-title>
+
+        <mat-card-content class="custom-alerts-content">
+          <app-custom-alert-manager></app-custom-alert-manager>
+        </mat-card-content>
+      </mat-card>
+
+    </div>
+  <div class="row">
+    <mat-card class="card alerts-history-card" [@cardAnimation]>
+      <mat-card-title class="list-title">
+        <mat-icon style="vertical-align: middle; margin-right: 6px;">dataset</mat-icon>
+        Alerts history
+        <p style="font-size: 0.9rem;">Here you can view alerts history on a selected day.</p>
+      </mat-card-title>
+      <app-alert [rooms]="rooms"></app-alert>
+    </mat-card>
+
+
+    <mat-card class="card sensors-history-card" [@cardAnimation]>
+      <mat-card-title class="list-title">
+        <mat-icon style="vertical-align: middle; margin-right: 6px;">dataset</mat-icon>
+        Sensors history
+        <p style="font-size: 0.9rem;">Here you can view sensors history on a selected day.</p>
+      </mat-card-title>
+      <mat-card-content class="sensor-history-content">
+
+        <div class="form-fields">
+          <mat-form-field appearance="outline">
+            <mat-label>Select room</mat-label>
+            <mat-select [(value)]="selectedRoom" [compareWith]="compareRooms" (selectionChange)="select_room($event.value)">
+            <mat-option *ngFor="let room of rooms" [value]="room">{{ room.name }}</mat-option>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field appearance="outline" *ngIf="selectedRoom">
+            <mat-label>Select sensor</mat-label>
+            <mat-select [(value)]="selectedSensor" (selectionChange)="select_sensor($event.value)">
+              <mat-option *ngFor="let sensor of selectedRoom.sensors" [value]="sensor">{{ sensor.sensorType }}</mat-option>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field appearance="outline" *ngIf="selectedSensor">
+            <mat-label>Select date</mat-label>
+            <input matInput [matDatepicker]="picker" placeholder="Choose a date" [(ngModel)]="selectedDate" (dateChange)="selected_date($event.value)">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field>
         </div>
 
-        <div class="dashboard-card add-room">
-          <button mat-fab color="primary" (click)="open_add_room_dialog()">
-            <mat-icon>add</mat-icon>
-          </button>
+
+        <div class="chart-container" *ngIf="selectedSensor">
+          <canvas baseChart
+                  [data]="chartData"
+                  [options]="chartOptions"
+                  [type]="'line'">
+            #realTimeChart={{chartData}}
+
+          </canvas>
         </div>
-      </div>
+      </mat-card-content>
+
     </mat-card>
+  </div>
 </main>
 
 
