--- a/AngularProject/src/app/components/home/home.component.css
+++ b/AngularProject/src/app/components/home/home.component.css
@@ -1,21 +1,20 @@
 .container {
-    display: flex;
-    height: 100vh;
-    width: 100vw;
-    overflow: hidden;
-  }
-  
-  .sidebar {
-    flex: 0 0 20%;
-    height: 100vh;
-    background-color: #4A4947;
-  }
-  
-  .dashboard {
-    flex: 1 1 80%;
-    height: 100vh;
-    background-color: #FAF7F0;
-    padding: 20px;
-    overflow: auto;
-  }
-  
+  display: flex;
+  height: 100dvh;
+  width: 100dvw;
+  overflow: hidden;
+}
+
+.sidebar {
+  flex: 0 0 20%;
+  height: 100dvh;
+  background-color: #31363F;
+}
+
+.dashboard {
+  flex: 1 1 80%;
+  height: 100dvh;
+  background-color: #EEEEEE;
+  padding: 1.25rem;
+  overflow: auto;
+}
