--- a/AngularProject/src/app/components/room-dialog/room-dialog.component.html
+++ b/AngularProject/src/app/components/room-dialog/room-dialog.component.html
@@ -1,21 +1,39 @@
 <h2 mat-dialog-title>{{ data.room.name }}</h2>
 
 <mat-dialog-content>
-  <div *ngFor="let sensor of data.room.sensors">
+  <div *ngFor="let sensor of room?.sensors">
     <mat-card class="sensor-card">
       <mat-card-header>
         <mat-card-title>{{ sensor.sensorType }}</mat-card-title>
       </mat-card-header>
+      <button mat-stroked-button class="set-limit-btn" color="primary" (click)="openCustomAlertDialog(sensor)">
+        <mat-icon fontIcon="tune" style="margin-right: 4px;"></mat-icon>
+        Set limits
+      </button>
       <mat-card-content>
         <div *ngIf="getLastDetail(sensor) as detail">
-          <p><b>{{ detail.timestamp!.seconds ? (detail.timestamp!.seconds * 1000 | date:'medium') : '' }}</b></p>
-          <div *ngFor="let data of (detail.data | keyvalue)">
-            <p *ngIf="data.key === 'temperature' || data.key === 'humidity'">
-              {{ data.key }}: {{ data.value }}{{ data.key === 'temperature' ? '°C' : (data.key === 'humidity' ? '%' : '') }}
-            </p>
-            <p *ngIf="data.key === 'gas'">
-              Gas level: {{ data.value }} – {{ getGasLevelMessage(data.value) }}
-            </p>
+
+          <p class="timestamp">{{ detail.timestamp!.seconds ? (detail.timestamp!.seconds * 1000 | date:'medium') : '' }}</p>
+
+          <div class="sensor-data-container">
+            <div *ngFor="let data of (detail.data | keyvalue)">
+              <div *ngIf="data.key === 'temperature'" [ngClass]="getCircleClass(data.key, data.value)" class="sensor-circle">
+                <small>Temperature</small>
+                <span>{{ data.value | number:'1.2-2' }}°C</span>
+              </div>
+              <div *ngIf="data.key === 'humidity'" [ngClass]="getCircleClass(data.key, data.value)" class="sensor-circle">
+                <small>Humidity</small>
+                <span>{{ data.value  | number:'1.2-2' }}%</span>
+              </div>
+              <div *ngIf="data.key === 'gas'" [ngClass]="getCircleClass(data.key, data.value)" class="sensor-circle">
+                <span>{{ data.value }}</span>
+              </div>
+              <p *ngIf="data.key === 'gas'">{{ getGasLevelMessage(data.value) }}</p>
+              <div *ngIf="data.key === 'mq2Value'" [ngClass]="getCircleClass(data.key, data.value)" class="sensor-circle">
+                <span>{{ data.value }}</span>
+              </div>
+              <p *ngIf="data.key === 'mq2Value'">{{ getMq2LevelMessage(data.value) }}</p>
+            </div>
           </div>
         </div>
       </mat-card-content>
