--- a/AngularProject/src/app/components/sidebar/sidebar.component.css
+++ b/AngularProject/src/app/components/sidebar/sidebar.component.css
@@ -1,49 +1,49 @@
 .sidebar-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    height: 100vh;
-    color: white;
-    box-sizing: border-box;
-  
-    .user-info {
-      text-align: center;
-      margin-bottom: 45px;
-  
-      .avatar {
-        width: 100px;
-        height: 100px;
-        border-radius: 50%;
-        object-fit: cover;
-        margin-bottom: 10px;
-      }
-  
-      .username {
-        font-weight: bold;
-        font-size: 25px;
-      }
-    }
-  
-    .nav-links {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-  
-      button {
-        width: 100%;
-        text-align:center;
-        font-weight: 600;
-        color: white;
-        font-size: 20px;
-        margin-top: 450px;
-      }
-    }
-    .title{
-      text-align: center;
-      font-size: 25px;
-      padding: 20px;
-      margin-bottom: 30px;
-    }
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1.25rem;
+  height: 100dvh;
+  color: white;
+  box-sizing: border-box;
+}
+
+.sidebar-content .user-info {
+  text-align: center;
+  margin-bottom: 2.8125rem;
+}
+
+.sidebar-content .avatar {
+  width: 6.25rem;
+  height: 6.25rem;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-bottom: 0.625rem;
+}
+
+.sidebar-content .username {
+  font-weight: bold;
+  font-size: 1.5625rem;
+}
+
+.sidebar-content .nav-links {
+  display: flex;
+  flex-direction: column;
+  gap: 0.9375rem;
+}
+
+.sidebar-content .nav-links button {
+  width: 100%;
+  text-align: center;
+  font-weight: 600;
+  color: white;
+  font-size: 1.25rem;
+  margin-top: 28.125rem;
+}
+
+.sidebar-content .title {
+  text-align: center;
+  font-size: 1.5625rem;
+  padding: 1.25rem;
+  margin-bottom: 1.875rem;
+}
