--- a/AngularProject/src/app/components/dashboard/dashboard.component.css
+++ b/AngularProject/src/app/components/dashboard/dashboard.component.css
@@ -9,7 +9,16 @@
   overflow-y: hidden;
   padding: 1rem 1.5rem 1.5rem 1.5rem;
 }
-
+.no-data-message{
+  margin-top: 20px;
+  text-align: center;
+  color: #888;
+  font-style: italic;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+}
 .row {
   display: flex;
   flex-wrap: wrap;
@@ -17,6 +26,7 @@
   width: 100%;
   box-sizing: border-box;
   justify-content: space-between;
+  align-items: flex-start;
 }
 
 /* ========== CARD BASE STYLE ========== */
@@ -32,6 +42,7 @@
   transition: transform 0.3s, box-shadow 0.3s;
   display: flex;
   flex-direction: column;
+  height: 500px;
 }
 
 .card:hover {
@@ -40,16 +51,25 @@
 }
 
 /* ========== SPECIFIC CARD STYLES ========== */
-.alerts-history-card,
-.manage-alerts-card,
-.rooms-list-card,
-.sensors-history-card {
-  width: calc(50% - 0.625rem);
-  max-width: calc(100vw - 0.625rem);
-  max-height: calc(100vw - 0.625rem);
+.rooms-list-card {
+  width: 40%;
   background-color: #E5E1DA;
 }
 
+.sensors-history-card {
+  width: 58%;
+  background-color: #E5E1DA;
+}
+
+.alerts-history-card {
+  width: 30%;
+  background-color: #E5E1DA;
+}
+
+.manage-alerts-card {
+  width: 68%;
+  background-color: #E5E1DA;
+}
 /* ========== ROOM CARD LIST ========== */
 .rooms-container {
   display: flex;
@@ -180,9 +200,8 @@ mat-form-field {
 
 .chart-container {
   width: 100%;
-  max-width: 100%;
-  min-height: 18.75rem;
-  overflow-x: auto;
+  height: 250px;
+  overflow: hidden;
   background: white;
   border-radius: 0.75rem;
   box-shadow: 0 0.25rem 0.5rem rgba(0,0,0,0.1);
@@ -192,7 +211,7 @@ mat-form-field {
 
 .chart-container canvas {
   max-width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 /* ========== TITLES ========== */
