--- a/AngularProject/src/app/components/room-dialog/room-dialog.component.css
+++ b/AngularProject/src/app/components/room-dialog/room-dialog.component.css
@@ -97,3 +97,14 @@
 .gas-detected {
   border-color: #ffc733;
 }
+
+.no-sensor-data{
+  margin-top: 20px;
+  text-align: center;
+  color: #888;
+  font-style: italic;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+}
