--- a/AngularProject/src/app/components/custom-alert-dialog/custom-alert-dialog.component.css
+++ b/AngularProject/src/app/components/custom-alert-dialog/custom-alert-dialog.component.css
@@ -7,6 +7,7 @@ mat-dialog-content {
 }
 .custom-field{
   margin-top: 8px;
+  margin-bottom: 8px;
 }
 mat-form-field {
   width: 100%;
@@ -61,6 +62,20 @@ button[mat-button] {
 
 button[mat-button]:not(:last-child) {
   margin-right: 8px;
+}
+
+.phone-fields {
+  display: flex;
+  gap: 16px;
+  margin-top: 20px;
+}
+
+.phone-prefix {
+  width: 30%;
+}
+
+.phone-number {
+  flex: 1;
 }
 
 
