Tests and comments

--- a/AngularProject/src/app/components/login/login.component.html
+++ b/AngularProject/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="split-container">
     <div class="quote-container">
-      <h1>Welcome to Room Monitoring System.</h1>
+      <h1>Welcome to SafeWorkspace!</h1>
     </div>
     <div class="form-container">
       <div class="login-container">
