--- a/AngularProject/src/app/components/register/register.component.html
+++ b/AngularProject/src/app/components/register/register.component.html
@@ -65,6 +65,6 @@
   </div>
 
   <div class="quote-container">
-    <h1>Create your account and start monitoring your rooms.</h1>
+    <h1>Create your account and start monitoring your workspace!</h1>
   </div>
 </div>
