--- a/AngularProject/src/app/components/sidebar/sidebar.component.html
+++ b/AngularProject/src/app/components/sidebar/sidebar.component.html
@@ -1,10 +1,10 @@
 <div class="sidebar-content">
-    <h1 class="title">Room Monitoring System</h1>
+    <h1 class="title">SafeWorkspace</h1>
     <div class="user-info">
       <img src="https://icons.veryicon.com/png/o/miscellaneous/two-color-icon-library/user-286.png" alt="Profile" class="avatar">
       <div class="username">{{userData?.name}}</div>
     </div>
-  
+
     <nav class="nav-links">
       <button mat-button (click)="logout()">
         <mat-icon>logout</mat-icon>
@@ -12,4 +12,3 @@
       </button>
     </nav>
 </div>
-  
